gen/books/v1/cargo-errors.log
    Checking google-books1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/books/v1/lib)
error[E0412]: cannot find type `SyncVolumeLicensesFeaturesItems` in module `crate::resources::myconfig::params`
    --> books/v1/lib/src/lib.rs:7394:64
     |
7394 |                 Option<Vec<crate::resources::myconfig::params::SyncVolumeLicensesFeaturesItems>>,
     |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::myconfig::params`

error[E0412]: cannot find type `SyncVolumeLicensesFeaturesItems` in module `crate::resources::myconfig::params`
    --> books/v1/lib/src/lib.rs:7412:61
     |
7412 |                     Vec<crate::resources::myconfig::params::SyncVolumeLicensesFeaturesItems>,
     |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::myconfig::params`

error[E0412]: cannot find type `ListAcquireMethodItems` in module `crate::resources::volumes::mybooks::params`
     --> books/v1/lib/src/lib.rs:13381:76
      |
13381 |                     Option<Vec<crate::resources::volumes::mybooks::params::ListAcquireMethodItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::volumes::mybooks::params`

error[E0412]: cannot find type `ListProcessingStateItems` in module `crate::resources::volumes::mybooks::params`
     --> books/v1/lib/src/lib.rs:13386:69
      |
13386 |                     Vec<crate::resources::volumes::mybooks::params::ListProcessingStateItems>,
      |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::volumes::mybooks::params`

error[E0412]: cannot find type `ListAcquireMethodItems` in module `crate::resources::volumes::mybooks::params`
     --> books/v1/lib/src/lib.rs:13403:73
      |
13403 |                         Vec<crate::resources::volumes::mybooks::params::ListAcquireMethodItems>,
      |                                                                         ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::volumes::mybooks::params`

error[E0412]: cannot find type `ListProcessingStateItems` in module `crate::resources::volumes::mybooks::params`
     --> books/v1/lib/src/lib.rs:13428:73
      |
13428 |                         Vec<crate::resources::volumes::mybooks::params::ListProcessingStateItems>,
      |                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::volumes::mybooks::params`

error[E0412]: cannot find type `ListProcessingStateItems` in module `crate::resources::volumes::useruploaded::params`
     --> books/v1/lib/src/lib.rs:14073:74
      |
14073 |                     Vec<crate::resources::volumes::useruploaded::params::ListProcessingStateItems>,
      |                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::volumes::useruploaded::params`

error[E0412]: cannot find type `ListProcessingStateItems` in module `crate::resources::volumes::useruploaded::params`
     --> books/v1/lib/src/lib.rs:14100:106
      |
14100 |                     value : impl Into < Vec < crate :: resources :: volumes :: useruploaded :: params :: ListProcessingStateItems > >,
      |                                                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::volumes::useruploaded::params`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-books1`.

To learn more, run the command again with --verbose.
